objects/Account_Trends__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>IF(OR(CONTAINS(CreatedById, &apos;005U0000001uZTv&apos;), CONTAINS(CreatedById, &apos;005U0000000gJOi&apos;), CONTAINS(CreatedById, &apos;005U0000001ud6Z&apos;)), &apos;IT Admin&apos;,  CreatedBy.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BLOCKED</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>SOLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BLOCKED</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>SOLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SML_Data__c</fullName>
        <label>SML Data</label>
        <referenceTo>SML_Data__c</referenceTo>
        <relationshipName>Account_Trends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Trends</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SML_Data__c</columns>
        <columns>New_Status__c</columns>
        <columns>Old_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Trends Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Trends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>